src/test/ui/lifetime-errors/ex1-return-one-existing-name-return-type-is-anon.stderr
error[E0621]: explicit lifetime required in the type of `self`
  --> $DIR/ex1-return-one-existing-name-return-type-is-anon.rs:18:5
   |
16 |   fn foo<'a>(&self, x: &'a i32) -> &i32 {
   |              ----- consider changing the type of `self` to `&'a Foo`
17 | 
18 |     x
   |     ^ lifetime `'a` required

error: aborting due to previous error

